--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -31,6 +31,13 @@
     <div class="filters">
       <label>Top:</label>
       <input
+        style="
+          width: 60px;
+          text-align: center;
+          background: rgba(255, 255, 255, 0.314);
+          border: 1px solid rgba(255, 255, 255, 0.5);
+          border-radius: 4px;
+        "
         type="number"
         [(ngModel)]="topVendor"
         (change)="onVendorFilterChange()"
@@ -38,14 +45,34 @@
       />
 
       <label>Category:</label>
-      <select [(ngModel)]="categoryVendor" (change)="onVendorFilterChange()">
+      <select
+        style="
+          width: 100px;
+          text-align: center;
+          background: rgba(255, 255, 255, 0.314);
+          border: 1px solid rgba(255, 255, 255, 0.5);
+          border-radius: 4px;
+        "
+        [(ngModel)]="categoryVendor"
+        (change)="onVendorFilterChange()"
+      >
         <option *ngFor="let c of categories" [value]="c">
           {{ c }}
         </option>
       </select>
 
       <label>Sort:</label>
-      <select [(ngModel)]="sortVendor" (change)="onVendorFilterChange()">
+      <select
+        style="
+          width: 80px;
+          text-align: center;
+          background: rgba(255, 255, 255, 0.314);
+          border: 1px solid rgba(255, 255, 255, 0.5);
+          border-radius: 4px;
+        "
+        [(ngModel)]="sortVendor"
+        (change)="onVendorFilterChange()"
+      >
         <option value="desc">Desc</option>
         <option value="asc">Asc</option>
       </select>
@@ -76,6 +103,13 @@
       <div class="filters">
         <label>Top:</label>
         <input
+          style="
+            width: 60px;
+            text-align: center;
+            background: rgba(255, 255, 255, 0.314);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            border-radius: 4px;
+          "
           type="number"
           [(ngModel)]="topProfit"
           (change)="loadProductsByProfit()"
@@ -83,7 +117,17 @@
         />
 
         <label>Sort:</label>
-        <select [(ngModel)]="sortProfit" (change)="loadProductsByProfit()">
+        <select
+          style="
+            width: 80px;
+            text-align: center;
+            background: rgba(255, 255, 255, 0.314);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            border-radius: 4px;
+          "
+          [(ngModel)]="sortProfit"
+          (change)="loadProductsByProfit()"
+        >
           <option value="desc">Desc</option>
           <option value="asc">Asc</option>
         </select>
